Swipe, security, full screen mode

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,23 @@
 spring.resources.chain.enabled = true
-server.jetty.acceptors = 4
+server.jetty.acceptors = 8
 server.port = 8888
 
+#path to albums (directories with photos)
 albums.path = /mnt/photos
+
+#extensions
 extensions.ignore = avi
 extensions.video = mov,mp4
+
+#rendering
+rendering.title = photoTrivia
 rendering.bgcolor = #222222
 rendering.linkcolor = #cccccc
 rendering.vlinkcolor = #888833
 
+#security
 user.admin.name = admin
-user.admin.password = 9876543210
+user.admin.password = qwertyuiop
 user.guest.name = guest
-user.guest.password = 76543210
+user.guest.password = 1234567890
 
