Templates cache, album photos list

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
+spring.main.banner-mode=off
+spring.jmx.enabled=false
+
 spring.resources.chain.enabled = true
-server.jetty.acceptors = 8
+server.jetty.acceptors = 4
 server.port = 8888
 
 #path to albums (directories with photos)
-albums.path = /mnt/photos
+albums.path = C:\\dev\\best
 
 #extensions
 extensions.ignore = avi
@@ -17,7 +20,7 @@ rendering.vlinkcolor = #888833
 
 #security
 user.admin.name = admin
-user.admin.password = qwertyuiop
+user.admin.password = 654321
 user.guest.name = guest
-user.guest.password = 1234567890
+user.guest.password = 4321
 
