--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,53 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>2.1.1.RELEASE</version>
             </plugin>
+            <plugin>
+                <groupId>io.fabric8</groupId>
+                <artifactId>docker-maven-plugin</artifactId>
+                <version>0.27.2</version>
+                <executions>
+                    <execution>
+                        <id>default</id>
+                        <goals>
+                            <goal>build</goal>
+                        </goals>
+                        <!--<id>start</id>
+                        <phase>pre-integration-test</phase>
+                        <goals>
+                            <goal>build</goal>
+                            <goal>start</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>stop</id>
+                        <phase>post-integration-test</phase>
+                        <goals>
+                            <goal>stop</goal>
+                        </goals>-->
+                    </execution>
+                </executions>
+                <configuration>
+                    <images>
+                        <image>
+                            <name>makswinner/phototrivia:${project.version}</name>
+                            <!--
+                            <build>
+                                <dockerFile>${project.basedir}/Dockerfile</dockerFile>
+                            </build>
+                            -->
+                            <!--<run>
+                                <ports>
+                                    <port>8888:8888</port>
+                                </ports>
+                                <wait>
+                                    <url>http://localhost:8080/wizard</url>
+                                    <time>120000</time>
+                                </wait>
+                            </run>-->
+                        </image>
+                    </images>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
