--- a/pom.xml
+++ b/pom.xml
@@ -94,33 +94,37 @@
                 <executions>
                     <execution>
                         <id>default</id>
+                        <phase>install</phase>
                         <goals>
                             <goal>build</goal>
-                        </goals>
-                        <!--<id>start</id>
-                        <phase>pre-integration-test</phase>
-                        <goals>
-                            <goal>build</goal>
-                            <goal>start</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>stop</id>
-                        <phase>post-integration-test</phase>
-                        <goals>
-                            <goal>stop</goal>
-                        </goals>-->
+                        <!--<goal>push</goal>-->
+                    </goals>
+                    <!--<id>start</id>
+                    <phase>pre-integration-test</phase>
+                    <goals>
+                        <goal>build</goal>
+                        <goal>start</goal>
+                    </goals>
+                </execution>
+                <execution>
+                    <id>stop</id>
+                    <phase>post-integration-test</phase>
+                    <goals>
+                        <goal>stop</goal>
+                    </goals>-->
                     </execution>
                 </executions>
                 <configuration>
+                    <verbose>true</verbose>
                     <images>
                         <image>
                             <name>makswinner/phototrivia:${project.version}</name>
-                            <!--
                             <build>
-                                <dockerFile>${project.basedir}/Dockerfile</dockerFile>
+                                <dockerFileDir>${project.basedir}</dockerFileDir>
+                                <args>
+                                    <JAR_FILE>target/photoTrivia-${project.version}.jar</JAR_FILE>
+                                </args>
                             </build>
-                            -->
                             <!--<run>
                                 <ports>
                                     <port>8888:8888</port>
