Comment docker goal

--- a/pom.xml
+++ b/pom.xml
@@ -96,22 +96,9 @@
                         <id>default</id>
                         <phase>install</phase>
                         <goals>
-                            <goal>build</goal>
-                        <!--<goal>push</goal>-->
-                    </goals>
-                    <!--<id>start</id>
-                    <phase>pre-integration-test</phase>
-                    <goals>
-                        <goal>build</goal>
-                        <goal>start</goal>
-                    </goals>
-                </execution>
-                <execution>
-                    <id>stop</id>
-                    <phase>post-integration-test</phase>
-                    <goals>
-                        <goal>stop</goal>
-                    </goals>-->
+                            <!--    <goal>build</goal>
+                            <goal>push</goal>-->
+                        </goals>
                     </execution>
                 </executions>
                 <configuration>
@@ -122,18 +109,9 @@
                             <build>
                                 <dockerFileDir>${project.basedir}</dockerFileDir>
                                 <args>
-                                    <JAR_FILE>target/photoTrivia-${project.version}.jar</JAR_FILE>
+                                    <JAR_FILE>target/${project.artifactId}-${project.version}.jar</JAR_FILE>
                                 </args>
                             </build>
-                            <!--<run>
-                                <ports>
-                                    <port>8888:8888</port>
-                                </ports>
-                                <wait>
-                                    <url>http://localhost:8080/wizard</url>
-                                    <time>120000</time>
-                                </wait>
-                            </run>-->
                         </image>
                     </images>
                 </configuration>
