--- a/pom.xml
+++ b/pom.xml
@@ -70,8 +70,6 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.8.1</version>
         </dependency>
-
-
         <!--<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -96,8 +94,8 @@
                         <id>default</id>
                         <phase>install</phase>
                         <goals>
-                            <!--    <goal>build</goal>
-                            <goal>push</goal>-->
+                            <goal>build</goal>
+                            <!--<goal>push</goal>-->
                         </goals>
                     </execution>
                 </executions>
