--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.jetty.acceptors = 4
 server.port = 8888
 
 #path to albums (directories with photos)
-albums.path = C:\\dev\\best
+albums.path = /mnt/photo
 
 #extensions
 extensions.ignore = avi
@@ -20,7 +20,7 @@ rendering.vlinkcolor = #888833
 
 #security
 user.admin.name = admin
-user.admin.password = 654321
+user.admin.password = qwerty
 user.guest.name = guest
 user.guest.password = 4321
 
