Change link colors

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,8 +15,8 @@ extensions.video = mov,mp4
 #rendering
 rendering.title = photoTrivia
 rendering.bgcolor = #222222
-rendering.linkcolor = #cccccc
-rendering.vlinkcolor = #888833
+rendering.linkcolor = #80FFFF
+rendering.vlinkcolor = #00C0C0
 
 #security
 user.admin.name = admin
