Change link color

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ extensions.video = mov,mp4
 #rendering
 rendering.title = photoTrivia
 rendering.bgcolor = #222222
-rendering.linkcolor = #80FFFF
+rendering.linkcolor = #CCFFFF
 rendering.vlinkcolor = #00C0C0
 
 #security
