Start on Raspberry in docker

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.resources.chain.enabled = true
 server.jetty.acceptors = 4
 server.port = 8888
 
-#path to albums (directories with photos)
-albums.path = /mnt/photo
+#path to albums (must not end with 'photo' because it will collide with hardcoded path)
+albums.path = /photos
 
 #extensions
 extensions.ignore = avi
@@ -20,7 +20,7 @@ rendering.vlinkcolor = #00C0C0
 
 #security
 user.admin.name = admin
-user.admin.password = qwerty
+user.admin.password = photoTrivia
 user.guest.name = guest
-user.guest.password = 4321
+user.guest.password = photoTrivia
 
