--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,4 +23,4 @@ user.admin.name = admin
 user.admin.password = photoTrivia
 user.guest.name = guest
 user.guest.password = photoTrivia
-
+user.guest.albums = 2019_New_Year,2018_Christmas
