add docker compose

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,10 +6,10 @@ server.jetty.acceptors = 4
 server.port = 8888
 
 #path to albums (must not end with 'photo' because it will collide with hardcoded path)
-albums.path = /photos
+albums.path = D:\\photo\\best
 
 #extensions
-extensions.ignore = avi
+extensions.ignore = avi,dat,mts,vob,mod
 extensions.video = mov,mp4
 
 #rendering
@@ -24,3 +24,5 @@ user.admin.password = photoTrivia
 user.guest.name = guest
 user.guest.password = photoTrivia
 user.guest.albums = 2019_New_Year,2018_Christmas
+
+user.guests = {"guest1":"pass1:Album1","guest2":"pass2:Album2,Album3"}
