add clear cache

--- a/pom.xml
+++ b/pom.xml
@@ -94,8 +94,8 @@
                         <id>default</id>
                         <phase>install</phase>
                         <goals>
-                            <goal>build</goal>
-                            <!--<goal>push</goal>-->
+                            <!--<goal>build</goal>
+                            <goal>push</goal>-->
                         </goals>
                     </execution>
                 </executions>
