All user albums

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,10 @@ spring.jmx.enabled=false
 spring.resources.chain.enabled = true
 server.jetty.acceptors = 4
 server.port = 8888
+server.servlet.session.timeout=60m
 
 #path to albums (must not end with 'photo' because it will collide with hardcoded path)
-albums.path = /photos
+albums.path = /home/user/photos
 
 #extensions
 extensions.ignore = avi
@@ -19,8 +20,14 @@ rendering.linkcolor = #CCFFFF
 rendering.vlinkcolor = #00C0C0
 
 #security
-user.admin.name = admin
-user.admin.password = photoTrivia
-user.guest.name = guest
-user.guest.password = photoTrivia
-user.guest.albums = 2019_New_Year,2018_Christmas
+admin.user.password = photoTrivia
+
+guest.users[0].name = papa
+guest.users[0].password = papa1
+guest.users[0].albums = 2018_New_Year
+guest.users[1].name = mama
+guest.users[1].password = mama1
+guest.users[1].albums = 2018_New_Year,2019_Portugal
+guest.users[2].name = iuliia
+guest.users[2].password = iuliia1
+guest.users[2].albums = *
