--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,12 +22,12 @@ rendering.vlinkcolor = #00C0C0
 #security
 admin.user.password = photoTrivia
 
-guest.users[0].name = papa
-guest.users[0].password = papa1
-guest.users[0].albums = 2018_New_Year
-guest.users[1].name = mama
-guest.users[1].password = mama1
-guest.users[1].albums = 2018_New_Year,2019_Portugal
-guest.users[2].name = iuliia
-guest.users[2].password = iuliia1
+guest.users[0].name = user1
+guest.users[0].password = pass1
+guest.users[0].albums = 2019_Album1
+guest.users[1].name = user2
+guest.users[1].password = pass2
+guest.users[1].albums = 2019_Album1,2019_Album2
+guest.users[2].name = user3
+guest.users[2].password = pass3
 guest.users[2].albums = *
