Fix rotation in new Chrome

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.port = 8888
 server.servlet.session.timeout=60m
 
 #path to albums (must not end with 'photo' because it will collide with hardcoded path)
-albums.path = /photos
+albums.path = /home/user/photos
 
 #extensions
 extensions.ignore = avi,dat,mts,vob,mod
@@ -27,7 +27,7 @@ guest.users[0].password = pass1
 guest.users[0].albums = 2019_Album1
 guest.users[1].name = user2
 guest.users[1].password = pass2
-guest.users[1].albums = 2019_Album1,2019_Album2
+guest.users[1].albums = 2019_Album1,2018 - New Year (1)
 guest.users[2].name = user3
 guest.users[2].password = pass3
 guest.users[2].albums = *
